--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>DuckLL's Slides</title>
   <meta content='yes' name='apple-mobile-web-app-capable'>
   <meta content='black-translucent' name='apple-mobile-web-app-status-bar-style'>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui' name='viewport'>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui'
+    name='viewport'>
   <link href='./css/reveal.css' rel='stylesheet'>
   <link href='./css/theme/white.css' id='theme' rel='stylesheet'>
   <!-- Code syntax highlighting -->
@@ -24,6 +25,18 @@
   <!--[if lt IE 9]>
       <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145305136-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-145305136-2');
+  </script>
 </head>
 
 <body>
